--- a/index.html
+++ b/index.html
@@ -2811,6 +2811,22 @@ sudo ufw allow ssh &amp;&amp; sudo ufw allow samba &amp;&amp; sudo ufw enable</p
     <div class="toast" id="toast"><span class="toast-icon">✅</span><span id="toastMsg">Copied to clipboard</span></div>
 
     <script>
+        /* ── Theme Toggle ── */
+        const themeToggleBtn = document.getElementById('themeToggle');
+        const savedTheme = localStorage.getItem('nas-theme');
+        if (savedTheme === 'light') {
+            document.documentElement.setAttribute('data-theme', 'light');
+            themeToggleBtn.textContent = '☀️';
+        }
+
+        themeToggleBtn.addEventListener('click', () => {
+            const currentTheme = document.documentElement.getAttribute('data-theme');
+            const newTheme = currentTheme === 'light' ? 'dark' : 'light';
+            document.documentElement.setAttribute('data-theme', newTheme);
+            localStorage.setItem('nas-theme', newTheme);
+            themeToggleBtn.textContent = newTheme === 'light' ? '☀️' : '🌙';
+        });
+
         /* ── Nav scroll + parallax hero ── */
         const nav = document.getElementById('navbar');
         const heroEl = document.querySelector('.hero');
