--- a/index.html
+++ b/index.html
@@ -2025,8 +2025,8 @@
             <span class="badge badge-ios">iPhone</span>
         </div>
         <a href="#overview" class="btn-primary">Get Started</a>
-        <img src="file:///C:/Users/indus/.gemini/antigravity/brain/fcece1ba-b6e8-4af1-957a-e5b15c017988/nas_hero_1772224908124.png"
-            alt="Raspberry Pi NAS Setup" class="hero-img" />
+        <img src="C:\Users\indus\Desktop\raspberry-pi-nas-guide\nas-hero.png" alt="Raspberry Pi NAS Setup"
+            class="hero-img" />
     </header>
 
     <!-- Overview -->
