--- a/index.html
+++ b/index.html
@@ -2025,8 +2025,7 @@
             <span class="badge badge-ios">iPhone</span>
         </div>
         <a href="#overview" class="btn-primary">Get Started</a>
-        <img src="C:\Users\indus\Desktop\raspberry-pi-nas-guide\nas-hero.png" alt="Raspberry Pi NAS Setup"
-            class="hero-img" />
+        <img src="nas-hero.png" alt="Raspberry Pi NAS Setup" class="hero-img" />
     </header>
 
     <!-- Overview -->
